# Squares

./: CMakeLists.txt
include/: board.hpp  client.hpp  server.hpp
src/: board.cpp  client.cpp  server.cpp
